--- a/sass/modules/service-card/_service-card.scss
+++ b/sass/modules/service-card/_service-card.scss
@@ -190,6 +190,8 @@
 
 // Theme Responsive
 .service-area-wrapper{
-    z-index: unset;
-    
+    z-index: unset !important;
+    .slider-area{
+        z-index: 10;
+    }
 }
